# asv-obstacle-avoidance

./: README.md
asv_vis/: main.py  main_test.py  ob_sac_test.npy  run-ob_sac_SAC_7-tag-rollout_ep_rew_mean.csv  run-ob_submit_sac_SAC_4-tag-rollout_ep_rew_mean.csv  sac_test.pkl  sac_train_p=1.npy  sac_train_p=10.npy  sac_train_p=5.npy  test.py
asv_vis/test_results/: sac_test_11.txt
catkin_ws/src/cartpole3d_ros/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/cartpole3d_ros/config/: cartpole3d_random_params.yaml  cartpole3d_train_all_params.yaml
catkin_ws/src/cartpole3d_ros/launch/: start_training_cartpole3d_a2c.launch  start_training_cartpole3d_dqn.launch  start_training_cartpole3d_enjoy_all.launch  start_training_cartpole3d_train_all.launch
catkin_ws/src/cartpole3d_ros/original_results/: train_time.csv
catkin_ws/src/cartpole3d_ros/scripts/: cartpole3d_a2c.py  cartpole3d_dqn.py  cartpole3d_enjoy_all.py  cartpole3d_random.py  cartpole3d_train_all.py  plot_reward.py
catkin_ws/src/wamv_drl_ros/: CMakeLists.txt  package.xml
simulation_ws/src/cart_pole/cartpole_description/: CMakeLists.txt  package.xml
simulation_ws/src/cart_pole/cartpole_description/launch/: put_robot_in_world.launch  robot_simulation_test.launch  spawn_cartpole_v0.launch  start_world.launch
simulation_ws/src/cart_pole/cartpole_v0_training/: CMakeLists.txt  package.xml
simulation_ws/src/cart_pole/cartpole_v0_training/config/: cartpole_qlearn_params_demo1.yaml
simulation_ws/src/cart_pole/cartpole_v0_training/scripts/: all_data_publisher.py  debug_test.py  gazebo_connection.py  start_training.py
(+100 files in other folders)
